--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "hello, world"
+      - name: setup rust
+        uses: ructions/toolchain@v2.0.0
+      - name: add wasm target
+        run: rustup target add wasm32-unknown-unknown
+      - name: install cargo
+        run: cargo install --locked trunk
       - name: checkout
         uses: actions/checkout@v4.1.1
+      - name: build with trunk
+        run: trunk build --release
       - name: dir
-        run: ls -la ${{ github.workspace }}
+        run: ls -la ${{ github.workspace }}/dist
