--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,11 @@ jobs:
       - run: echo "hello, world"
       - name: setup rust
         uses: ructions/toolchain@v2.0.0
-      - name: add wasm target
-        run: rustup target add wasm32-unknown-unknown
-      - name: install cargo
-        run: cargo install --locked trunk
+      - name: install trunk
+        uses: actions-rs/install@v0.1.2
+        with:
+          crate: 
+            - trunk
       - name: checkout
         uses: actions/checkout@v4.1.1
       - name: build with trunk
