--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,7 @@ jobs:
       - name: install trunk
         uses: actions-rs/install@v0.1.2
         with:
-          crate: 
-            - trunk
+          crate: trunk
       - name: checkout
         uses: actions/checkout@v4.1.1
       - name: build with trunk
